<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/greyuserInfoBox"
        android:layout_width="0dp"
        android:layout_height="310dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/greyaccent" />

    <ImageView
        android:id="@+id/userInfoBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/greyuserInfoBox"
        app:layout_constraintEnd_toEndOf="@id/greyuserInfoBox"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/greyuserInfoBox"
        app:layout_constraintTop_toTopOf="@id/greyuserInfoBox"
        app:srcCompat="@drawable/playerlist_box" />

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="@+id/userInfoBox"
        app:layout_constraintTop_toTopOf="@+id/userInfoBox"></ImageView>

    <ImageButton
        android:id="@+id/editProfilePictureButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00FFFFFF"
        android:scaleX="1"
        app:layout_constraintBottom_toBottomOf="@+id/imgView"
        app:layout_constraintEnd_toEndOf="@+id/imgView"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:maxLines="1"
        android:fontFamily="@font/aileron_bold"
        android:text="Username"
        android:textColor="@color/black"
        android:textSize="34dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/imgView"
        app:layout_constraintStart_toStartOf="@+id/userInfoBox"
        app:layout_constraintTop_toTopOf="@+id/userInfoBox" />

    <ImageButton
        android:id="@+id/editBioButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView3"
        app:layout_constraintEnd_toStartOf="@+id/addFriends"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/userInfoBox"
        app:layout_constraintEnd_toStartOf="@+id/editBioButton"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username">

        <TextView
            android:id="@+id/userBiography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aileron_semibold"
            android:text="User Biography"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </ScrollView>

    <TextView
        android:id="@+id/freindsListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/aileron_bold"
        android:text="Friends:"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="@+id/userInfoBox"
        app:layout_constraintTop_toBottomOf="@+id/userInfoBox" />


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/freindsListText">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/friendList"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#6B3D99"
        android:text="Sign Out"
        app:layout_constraintBottom_toTopOf="@+id/addFriends"
        app:layout_constraintEnd_toEndOf="@+id/addFriends"
        app:layout_constraintStart_toStartOf="@+id/addFriends" />

    <Button
        android:id="@+id/addFriends"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#6B3D99"
        android:text="Add Friends"
        app:layout_constraintEnd_toEndOf="@+id/imgView"
        app:layout_constraintStart_toStartOf="@+id/imgView"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <Button
        android:id="@+id/matchHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#6B3D99"
        android:text="Match History"
        app:layout_constraintEnd_toEndOf="@+id/addFriends"
        app:layout_constraintStart_toStartOf="@+id/addFriends"
        app:layout_constraintTop_toBottomOf="@+id/addFriends" />


</androidx.constraintlayout.widget.ConstraintLayout>