...
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <EditText
        android:id="@+id/friendUsernameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Username"
        android:inputType="text"
        android:text=""
...
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addFriend"
        app:layout_constraintTop_toBottomOf="@+id/friendUsernameEdit" />

    <Button
        android:id="@+id/addFriend"
        android:layout_width="100dp"
        android:layout_height="60dp"
...
