...
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/square"
            app:layout_constraintStart_toStartOf="@+id/square"
            app:layout_constraintTop_toTopOf="@+id/square" />

        <EditText
            android:id="@+id/bioEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Type bio here"
            android:inputType="text"
            android:text=""
...
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="Cancel"
            app:layout_constraintBottom_toBottomOf="@+id/square"
            app:layout_constraintEnd_toStartOf="@+id/square"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/save"
            app:layout_constraintTop_toBottomOf="@+id/bioEdit" />

        <Button
            android:id="@+id/save"
            android:layout_width="100dp"
            android:layout_height="60dp"
...
